<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.wingstars.register.RegisterActivity">
        <!-- Header -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_64"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/iv_close"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginStart="@dimen/dp_20"
                    android:src="@drawable/ic_arrow_left"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_psd"
                android:textColor="@color/text_tittle"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- SCROLL CONTENT -->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toTopOf="@id/btn_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20">

                <!-- BƯỚC 1: PHONE + OTP -->
                <LinearLayout
                    android:id="@+id/ll_input_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="手機號碼"
                        android:textColor="@color/text_tittle"
                        android:textSize="@dimen/sp_24"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/note_phone_code"
                        android:textColor="@color/text_body"
                        android:textSize="@dimen/sp_14"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/phone"
                        android:textColor="@color/text_tittle"
                        android:textSize="@dimen/sp_14"/>

                    <RelativeLayout
                        android:id="@+id/rl_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pt_8"
                        android:background="@drawable/bg_input_selector"
                        android:addStatesFromChildren="true"
                        android:paddingStart="@dimen/dp_20"
                        android:paddingTop="@dimen/dp_17"
                        android:paddingEnd="@dimen/dp_20"
                        android:paddingBottom="@dimen/dp_17">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_send_code"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:enabled="false"
                            android:background="@drawable/bg_send_code_selector"
                            android:paddingStart="@dimen/dp_12"
                            android:paddingEnd="@dimen/dp_12"
                            android:text="@string/send_phone_code"
                            android:textColor="@color/text_tittle"
                            android:textAlignment="center"
                            android:textSize="@dimen/sp_14"
                            android:visibility="visible"/>

                        <RelativeLayout
                            android:id="@+id/rl_code_timer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/tv_code_timer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="59s"
                                android:textColor="@color/color_E2518D"
                                android:textSize="@dimen/sp_12"/>

                            <TextView
                                android:id="@+id/tv_resend"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/tv_code_timer"
                                android:paddingHorizontal="8dp"
                                android:paddingVertical="4dp"
                                android:text=" 重新傳送"
                                android:textColor="@color/text_subtitle"
                                android:textSize="@dimen/sp_12"/>
                        </RelativeLayout>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@id/rl_code_timer"
                            android:background="@null"
                            android:hint="@string/hint_phone_register"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:nextFocusForward="@id/edt_phone_code"
                            android:singleLine="true"
                            android:textColor="@color/text_tittle"
                            android:textColorHint="@color/gray_400"
                            android:textSize="@dimen/sp_14"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_phone_input_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/error_format"
                        android:textColor="@color/color_FB2C36"
                        android:textSize="@dimen/sp_12"
                        android:layout_marginTop="@dimen/dp_2"
                        android:ellipsize="end"
                        android:includeFontPadding="false"
                        android:visibility="invisible"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/phone_code"
                        android:textColor="@color/text_tittle"
                        android:textSize="@dimen/sp_14"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pt_8"
                        android:background="@drawable/bg_input_selector"
                        android:addStatesFromChildren="true"
                        android:paddingStart="@dimen/dp_20"
                        android:paddingTop="@dimen/dp_17"
                        android:paddingEnd="@dimen/dp_20"
                        android:paddingBottom="@dimen/dp_17">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_phone_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/hint_phone_code_register"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:inputType="number"
                            android:textColor="@color/text_tittle"
                            android:textColorHint="@color/gray_400"
                            android:textSize="@dimen/sp_14"/>
                    </RelativeLayout>
                </LinearLayout>

                <!-- BƯỚC 2: PASSWORD -->
                <LinearLayout
                    android:id="@+id/ll_input_psd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="號碼"
                        android:textColor="@color/text_tittle"
                        android:textSize="@dimen/sp_24"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/note_right_psd"
                        android:textColor="@color/text_tittle"
                        android:textSize="@dimen/sp_14"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/password"
                        android:textColor="@color/text_tittle"
                        android:textSize="@dimen/sp_14" />

                    <RelativeLayout
                        android:id="@+id/rl_psd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pt_8"
                        android:background="@drawable/bg_input_selector"
                        android:addStatesFromChildren="true"
                        android:paddingLeft="@dimen/dp_20"
                        android:paddingTop="@dimen/dp_17"
                        android:paddingRight="@dimen/dp_20"
                        android:paddingBottom="@dimen/dp_17">

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_psd_visible"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:button="@drawable/checkbox_psd_visible"
                            android:checked="false" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_psd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@id/cb_psd_visible"
                            android:background="@null"
                            android:hint="@string/hint_psd"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:nextFocusForward="@id/edt_psd_confirm"
                            android:singleLine="true"
                            android:textColor="@color/text_tittle"
                            android:textColorHint="@color/gray_400"
                            android:textSize="@dimen/sp_14" />
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/tv_psd_input_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:textColor="@color/color_FB2C36"
                        android:textSize="@dimen/sp_12"
                        android:text="@string/error_format"
                        android:ellipsize="end"
                        android:includeFontPadding="false"
                        android:visibility="invisible"/>




                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/register_psd_confirm"
                        android:textColor="@color/text_tittle"
                        android:textSize="@dimen/sp_14" />

                    <RelativeLayout
                        android:id="@+id/rl_psd_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pt_8"
                        android:background="@drawable/bg_input_selector"
                        android:addStatesFromChildren="true"
                        android:paddingLeft="@dimen/dp_20"
                        android:paddingTop="@dimen/dp_17"
                        android:paddingRight="@dimen/dp_20"
                        android:paddingBottom="@dimen/dp_17">

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_psd_confirm_visible"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:button="@drawable/checkbox_psd_visible"
                            android:checked="false" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_psd_confirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@id/cb_psd_confirm_visible"
                            android:background="@null"
                            android:hint="@string/hint_input_new_psd_again"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:nextFocusForward="@id/edt_name"
                            android:singleLine="true"
                            android:textColor="@color/text_tittle"
                            android:textColorHint="@color/gray_400"
                            android:textSize="@dimen/sp_14" />
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/tv_psd_reinput_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:ellipsize="end"
                        android:includeFontPadding="false"
                        android:text="@string/error_format"
                        android:textColor="@color/color_FB2C36"
                        android:textSize="@dimen/sp_12"
                        android:visibility="invisible" />


                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <!-- Confirm pinned to bottom -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/gray_500"
            android:paddingTop="@dimen/dp_18"
            android:paddingBottom="@dimen/dp_18"
            android:text="@string/next_step"
            android:gravity="center"
            android:background="@color/gray_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
